[cak] update from Pootle (firefox-beta)

--- a/cak/browser/chrome/browser/accounts.properties
+++ b/cak/browser/chrome/browser/accounts.properties
@@ -25,6 +25,7 @@ resendVerificationEmail.label = Titaq chik
 resendVerificationEmail.accessKey = T
 
 # LOCALIZATION NOTE (reconnectDescription) - %S = Email address of user's Firefox Account
+reconnectDescription = Tokisäx chik %S
 
 forgetMigration.label = Timestäx
 forgetMigration.accessKey = T
