--- a/cak/browser/chrome/browser/browser.properties
+++ b/cak/browser/chrome/browser/browser.properties
@@ -79,14 +79,23 @@ addonInstallRestartButton.accesskey=R
 
 # LOCALIZATION NOTE (addonInstallError-1, addonInstallError-2, addonInstallError-3, addonInstallError-4, addonInstallError-5, addonLocalInstallError-1, addonLocalInstallError-2, addonLocalInstallError-3, addonLocalInstallError-4, addonLocalInstallError-5):
 # %1$S is the application name, %2$S is the add-on name
+addonInstallError-1=Man tikirel ta xqasäx ri rutz'aqat ruma jun sachoj richin okem.
+addonInstallError-2=Man tikirel ta xyak ri tz'aqat ruma man nuxïm ta ri' rik'in ri tz'aqat %1$S oyob'en.
+addonInstallError-3=Man tikirel ta xyak ri qasan tz'aqat qasan pa re ruxaq re' ruma achi'el ta yujtajinäq.
+addonInstallError-4=Man tikirel ta xyak%2$S ruma %1$S man xtikïr ta xuk'ëx ri rajowaxik yakb'äl.
+addonInstallError-5=%1$S xchajïx re ruxaq k'amaya'l re' ruma xuyäk jun tz'aqat, ri man xnik'öx ta.
 addonLocalInstallError-1=Re jun rutz'aqat re' man xyak ta ruma jun sachoj pa kinuk'ulem taq yakb'äl.
+addonLocalInstallError-2=Man tikirel ta xyak re add-on re' ruma man nuxïm ta ri' rik'in ri add-on %1$S oyob'en.
 addonLocalInstallError-3=Re jun rutz'aqat re' man xyak ta kan ruma achi'el ta chi man ütz ta.
+addonLocalInstallError-4=Man tikirel ta niyak ri %2$S ruma chi ri %1$S man nitikïr ta nuk'ëx ri rajowaxik yakb'äl.
 addonLocalInstallError-5=Man xyak ta kan re jun rutz'aqat re' ruma chi man nik'on ta.
 
 # LOCALIZATION NOTE (addonInstallErrorIncompatible):
 # %1$S is the application name, %2$S is the application version, %3$S is the add-on name
+addonInstallErrorIncompatible=Man xtikïr ta xeruyäk ri %3$S ta ruma man nikik'äm ta ki' rik'in %1$S %2$S.
 
 # LOCALIZATION NOTE (addonInstallErrorBlocklisted): %S is add-on name
+addonInstallErrorBlocklisted=Man tikirel ta xyak ri %S, ruma k'o retal chi janila nuya' k'ayewal chi pa ruwi' ruchuq'a' samaj chuqa' ruchajixik.
 
 unsignedAddonsDisabled.message=Jun o ch'aqa' chik taq tz'aqat eyakon man tikirel ta yenik'öx, ruma ri' xetz'apïx.
 unsignedAddonsDisabled.learnMore.label=Tetamäx ch'aqa' chik
@@ -110,7 +119,7 @@ lwthemePostInstallNotification.manageButton.accesskey=K
 
 # LOCALIZATION NOTE (lwthemeNeedsRestart.message):
 # %S will be replaced with the new theme name.
-lwthemeNeedsRestart.message=&S xtiyake' kan toq xtatzij chik jub'ey.
+lwthemeNeedsRestart.message=%S xtiyake' kan toq xtatzij chik jub'ey.
 lwthemeNeedsRestart.button=Titzij chik wakami
 lwthemeNeedsRestart.accesskey=R
 
@@ -320,10 +329,11 @@ identity.identified.verifier=Jikib'an ruma: %S
 identity.identified.verified_by_you=Xatz'aqatisaj jun man relik ta chajixik pa re jun k'amaya'l re'.
 identity.identified.state_and_country=%S, %S
 
-identity.broken_loaded=Man kan ta ronojel ütz chi re ri okem pa re k'amaya'l re', ruma e k'o taq ch'akulal ri man e'etaman ta (achi'el taq wachib'äl) o ri k'o chi netamäx man jun ruchuq'a'.
-identity.mixed_active_loaded2=Pa re jun ruxaq k'amaya'l re' k'o silöy taq rupam ri man eb'anon ta ENKRIPTAR (achi'el taq SKRIP). Juley chik winaqi' yetikïr nikitz'ët ri atzijol chuqa' yetikïr nikijalwachij rusamaj re jun k'amaya'l re'.\u0020
-
 identity.unknown.tooltip=Re jun k'amaya'l re' man nuya' ta rutzijol chi rij ri at achike rat.
+
+# LOCALIZATION NOTE (trackingProtection.intro.description): %S is brandShortName
+# LOCALIZATION NOTE (trackingProtection.intro.step1of3): Indicates that the intro panel is step one of three in a tour.
+
 
 # Edit Bookmark UI
 editBookmarkPanel.pageBookmarkedTitle=Tz'aqatisan taq ruxaq rik'in samajib'äl
@@ -356,6 +366,8 @@ geolocation.alwaysShareLocation=Junelïk tiq'alajisäx k'ojlemal
 geolocation.alwaysShareLocation.accesskey=A
 geolocation.neverShareLocation=Majub'ey tuq'alajisaj k'ojlemal
 geolocation.neverShareLocation.accesskey=N
+geolocation.shareWithSite2=¿La nawajo' ta k'a ri, naq'alajisaj ri ak'ojolemal rik'in re ruxaq k'amaya'l re'?
+geolocation.shareWithFile2=¿La nawajo' ta k'a ri, naq'alajisaj ri ak'ojolemal rik'in re yakb'äl re'?
 
 webNotifications.showForSession=Tik'ut pe pa re jun samaj re'
 webNotifications.showForSession.accesskey=s
@@ -363,6 +375,7 @@ webNotifications.alwaysShow=Jantape' keq'aläj ri taq rutzijol
 webNotifications.alwaysShow.accesskey=S
 webNotifications.neverShow=Jantape' keq'at ri taq rutzijol
 webNotifications.neverShow.accesskey=b
+webNotifications.showFromSite2=¿La nawajo' ta k'a ri ye'ak'üt pe taq rutzijol re ruxaq k'amaya'l re'?
 
 # Push Notifications
 push.allowForSession=Tiya' q'ij chi re ri moloj
@@ -371,6 +384,7 @@ push.alwaysAllow=Junelïk tiya' q'ij chi ke ri elenel taq rutzijol
 push.alwaysAllow.accesskey=J
 push.alwaysBlock=Jantape' keq'eleb'ëx ri elenel taq rutzijol
 push.alwaysBlock.accesskey=k
+push.enablePush2=¿La nawajo' naya' q'ij chi ke ri elenel taq rutzijol richin ri ruxaq k'amaya'l re'?
 
 # Pointer lock UI
 
@@ -380,6 +394,8 @@ pointerLock.alwaysAllow=Jantape' tiya' q'ij  richin newäx
 pointerLock.alwaysAllow.accesskey=S
 pointerLock.neverAllow=Majub'ey tiya' q'ij richin newäx
 pointerLock.neverAllow.accesskey=N
+pointerLock.title3=¿La nawajo' naya' q'ij chi man tiq'alaj ri retal ch'oy pa re ruxaq k'amaya'l re'?
+pointerLock.autoLock.title3=Re ruxaq k'amaya'l re nrewaj ri retal choy.
 
 # Phishing/Malware Notification Bar.
 # LOCALIZATION NOTE (notAForgery, notAnAttack)
@@ -469,6 +485,7 @@ processHang.button.accessKey = C
 webapps.install = Rujumik
 webapps.install.accesskey = I
 #LOCALIZATION NOTE (webapps.requestInstall2) %S is the web app name
+webapps.requestInstall2 = ¿La nawajo' nayäk ri “%S” richin re ruxaq k'amaya'l re'?
 webapps.install.success = Samajib'äl yakon
 webapps.install.inprogress = Tajin niyak
 webapps.uninstall = Tik'am el chupam
@@ -476,11 +493,10 @@ webapps.uninstall.accesskey = T
 webapps.doNotUninstall = Man Tik'am el chupam
 webapps.doNotUninstall.accesskey = M
 #LOCALIZATION NOTE (webapps.requestUninstall) %1$S is the web app name
+webapps.requestUninstall = ¿La nawajo' nak'äm el ri “%1$S” chupam?
 
 # LOCALIZATION NOTE (fullscreen.entered): displayed when we enter HTML5 fullscreen mode, %S is the domain name of the focused website (e.g. mozilla.com).
 fullscreen.entered=%S wakami k'o pa nïm rutzub'al kematz'ib'
-# LOCALIZATION NOTE (fullscreen.rememberDecision): displayed when we enter HTML5 fullscreen mode, %S is the domain name of the focused website (e.g. mozilla.com).
-fullscreen.rememberDecision=Runataxik tzij chi re %S
 
 # LOCALIZATION NOTE (fullscreenButton.tooltip): %S is the keyboard shortcut for full screen
 fullscreenButton.tooltip=Tik'ut ri kajtz'ïk chijun ri tzub'al (%S)
@@ -529,7 +545,8 @@ identity.loggedIn.signOut.accessKey = E
 
 # LOCALIZATION NOTE (getUserMedia.shareCamera.message, getUserMedia.shareMicrophone.message,
 #                    getUserMedia.shareScreen.message, getUserMedia.shareCameraAndMicrophone.message,
-#                    getUserMedia.shareScreenAndMicrophone.message):
+#                    getUserMedia.shareScreenAndMicrophone.message, getUserMedia.shareCameraAndAudioCapture.message,
+#                    getUserMedia.shareAudioCapture.message, getUserMedia.shareScreenAndAudioCapture.message):
 #  %S is the website origin (e.g. www.mozilla.org)
 getUserMedia.shareCamera.message = ¿Nawajo' ta k'a ri naq'alajisaj ri awelesäy wachib'äl rik'in %S?
 getUserMedia.shareMicrophone.message = ¿Nawajo' ta k'a ri najunamaj ri aq'asäy tzij rik'in %S?
@@ -586,6 +603,7 @@ getUserMedia.sharingMenu.label = Taq okisaxel tajin nikikomonij taq ruwi'
 getUserMedia.sharingMenu.accesskey = r
 # LOCALIZATION NOTE (getUserMedia.sharingMenuCamera
 #                    getUserMedia.sharingMenuMicrophone,
+#                    getUserMedia.sharingMenuAudioCapture,
 #                    getUserMedia.sharingMenuApplication,
 #                    getUserMedia.sharingMenuScreen,
 #                    getUserMedia.sharingMenuWindow,
@@ -595,6 +613,11 @@ getUserMedia.sharingMenu.accesskey = r
 #                    getUserMedia.sharingMenuCameraMicrophoneScreen,
 #                    getUserMedia.sharingMenuCameraMicrophoneWindow,
 #                    getUserMedia.sharingMenuCameraMicrophoneBrowser,
+#                    getUserMedia.sharingMenuCameraAudioCapture,
+#                    getUserMedia.sharingMenuCameraAudioCaptureApplication,
+#                    getUserMedia.sharingMenuCameraAudioCaptureScreen,
+#                    getUserMedia.sharingMenuCameraAudioCaptureWindow,
+#                    getUserMedia.sharingMenuCameraAudioCaptureBrowser,
 #                    getUserMedia.sharingMenuCameraApplication,
 #                    getUserMedia.sharingMenuCameraScreen,
 #                    getUserMedia.sharingMenuCameraWindow,
@@ -602,7 +625,11 @@ getUserMedia.sharingMenu.accesskey = r
 #                    getUserMedia.sharingMenuMicrophoneApplication,
 #                    getUserMedia.sharingMenuMicrophoneScreen,
 #                    getUserMedia.sharingMenuMicrophoneWindow,
-#                    getUserMedia.sharingMenuMicrophoneBrowser):
+#                    getUserMedia.sharingMenuMicrophoneBrowser,
+#                    getUserMedia.sharingMenuAudioCaptureApplication,
+#                    getUserMedia.sharingMenuAudioCaptureScreen,
+#                    getUserMedia.sharingMenuAudioCaptureWindow,
+#                    getUserMedia.sharingMenuAudioCaptureBrowser):
 # %S is the website origin (e.g. www.mozilla.org)
 getUserMedia.sharingMenuCamera = %S (elesäy wachib'äl)
 getUserMedia.sharingMenuMicrophone = %S (talüy k'oxom)
@@ -688,82 +715,10 @@ appmenu.updateFailed.description = Man xtikïr ta ri k'exoj ruwäch pa ruka'n b'
 appmenu.restartBrowserButton.label = Titikirisäx %S
 appmenu.downloadUpdateButton.label = Tiqasäx ri k'exoj ruwäch
 
-# LOCALIZATION NOTE : FILE Reading List and Reader View are feature names and therefore typically used as proper nouns.
+# LOCALIZATION NOTE : FILE Reader View is a feature name and therefore typically used as a proper noun.
 
-# Pre-landed string for bug 1124153
-# LOCALIZATION NOTE(readingList.sidebar.showMore.tooltip): %S is the number of items that will be added by clicking this button
-# Semicolon-separated list of plural forms. See:
-# http://developer.mozilla.org/en/docs/Localization_and_Plurals
-readingList.sidebar.showMore.tooltip = Tik'ut %S ch'aqa' chik rutzijol na'oj;Kek'ut %S ch'aqa' chik taq rutzijol na'oj
-# Pre-landed strings for bug 1131457 / bug 1131461
-readingList.urlbar.add = Titz'aqatisäx ruxaq pa ri rucholb'al sik'inïk
-readingList.urlbar.addDone = Xtz'aqatisäx ruxaq pa ri rucholb'al sik'inïk
-readingList.urlbar.remove = Tiyuj ri ruxaq pa ri rucholb'al sik'inïk
-readingList.urlbar.removeDone = Xyuj el ri ruxaq pa Rucholb'al Sik'inïk
-# Pre-landed strings for bug 1133610 & bug 1133611
-# LOCALIZATION NOTE(readingList.promo.noSync.label): %S a link, using the text from readingList.promo.noSync.link
-readingList.promo.noSync.label = Katok pa ri rucholb'al asik'inik pa xa b'a achike awokisaxel. %S
-# LOCALIZATION NOTE(readingList.promo.noSync.link): %S is syncBrandShortName
-readingList.promo.noSync.link = Tichap rokisaxik ri %S.
-# LOCALIZATION NOTE(readingList.promo.hasSync.label): %S is syncBrandShortName
-readingList.promo.hasSync.label = Wakami yatikïr yatok chupam ri rucholb'al asik'inik rik'in konojel ri taq awokisaxel ye'okisäx ruma ri %S.
-
-# Pre-landed strings for bug 1136570
-readerView.promo.firstDetectedArticle.title = Kesik'ïx chuqa' keyak rutzijol taq na'oj aninäq
-readerView.promo.firstDetectedArticle.body = Tapitz'a' ri wuj richin chi aninäq ye'asik'ij ri rutzijol taq na'oj chuqa' ri tz'ib' ti xalq'a't richin chi ye'ayäk kan richin pa jun chik ti ramaj.
-readingList.promo.firstUse.exitTourButton = Titz'apïx
-# LOCALIZATION NOTE(readingList.promo.firstUse.tourDoneButton):
-# » is used as an indication that pressing this button progresses through the tour.
-readingList.promo.firstUse.tourDoneButton = Titikirisäx ri sik'inem »
-# LOCALIZATION NOTE(readingList.promo.firstUse.readingList.multipleStepsTitle):
-# This is used when there are multiple steps in the tour.
-# %1$S is the current step's title (readingList.promo.firstUse.*.title), %2$S is the current step number of the tour, %3$S is the total number of steps.
-readingList.promo.firstUse.multipleStepsTitle = %1$S (%2$S/%3$S)
-readingList.promo.firstUse.readingList.title = Rucholajem sik'inem
-readingList.promo.firstUse.readingList.body = Keyak ri rutzijol taq na'oj richin pa jun chik ti mej chuqa' aninäq ke'ilitäj toq xke'ajowäx pe.
-# LOCALIZATION NOTE(readingList.promo.firstUse.readingList.moveToButton):
-# » is used as an indication that pressing this button progresses through the tour.
-readingList.promo.firstUse.readingList.moveToButton = Jun chik: Aninäq rukanoxik »
 readingList.promo.firstUse.readerView.title = Rutzetik rik'in sik'ib'äl
 readingList.promo.firstUse.readerView.body = Ke'ayuju' ri taq sachoj k'u'x richin yatikïr naya' awäch chi kij ri nawajo' ye'asik'ij.
-# LOCALIZATION NOTE(readingList.promo.firstUse.readerView.moveToButton):
-# » is used as an indication that pressing this button progresses through the tour.
-readingList.promo.firstUse.readerView.moveToButton = Jun chik: Aninäq rukanoxik »
-readingList.promo.firstUse.syncNotSignedIn.title = Tixim
-# LOCALIZATION NOTE(readingList.promo.firstUse.syncNotSignedIn.body): %S is brandShortName
-readingList.promo.firstUse.syncNotSignedIn.body = Katok richin nawïl ri awokem pa ri rucholb'al asik'inik, xa b'a akuchi' nawokisaj %S.\u00A0
-# LOCALIZATION NOTE(readingList.promo.firstUse.syncNotSignedIn.moveToButton):
-# » is used as an indication that pressing this button progresses through the tour.
-readingList.promo.firstUse.syncNotSignedIn.moveToButton = Jun chik: Aninäq rokik »
-readingList.promo.firstUse.syncSignedIn.title = Tixim
-# LOCALIZATION NOTE(readingList.promo.firstUse.syncSignedIn.body): %S is brandShortName
-readingList.promo.firstUse.syncSignedIn.body = Ke'ajaqa' ri taq rutzijol na'oj pa ri rucholb'al asik'inem, xa b'a akuchi' nawajo' nawokisaj %S.
-# LOCALIZATION NOTE(readingList.promo.firstUse.syncSignedIn.moveToButton):
-# » is used as an indication that pressing this button progresses through the tour.
-readingList.promo.firstUse.syncSignedIn.moveToButton = Jun chik: Aninäq rokik »
-
-# Pre-landed strings for bug 1136570
-# LOCALIZATION NOTE(readingList.prepopulatedArticles.learnMore):
-# This will show as an item in the Reading List, and will link to a page that explains and shows how the Reading List and Reader View works.
-# This will be staged at:
-#   https://www.allizom.org/firefox/reading/start/
-# And eventually available at:
-#   https://www.mozilla.org/firefox/reading/start/
-# %S is brandShortName
-readingList.prepopulatedArticles.learnMore = Tawetamaj achike rub'eyal ri %S nub'än jeb'ël chi re ri sik'inïk
-# LOCALIZATION NOTE(readingList.prepopulatedArticles.supportReadingList):
-# This will show as an item in the Reading List, and will link to a SUMO article describing the Reading List:
-#   https://support.mozilla.org/kb/save-sync-and-read-pages-anywhere-reading-list
-readingList.prepopulatedArticles.supportReadingList = Ke'ayaka', ke'axima' chuqa' ke'asik'ij taq ruxaq xa b'a akuchi' rik'in ri rucholb'al asik'inik
-# LOCALIZATION NOTE(readingList.prepopulatedArticles.supportReaderView):
-# This will show as an item in the Reading List, and will link to a SUMO article describing the Reader View:
-#   https://support.mozilla.org/kb/enjoy-clutter-free-web-pages-reader-view
-readingList.prepopulatedArticles.supportReaderView = Tik'asäs tana' kik'in ri taq ruxaq k'amaya'l, ri majun taq sachoj k'u'x chi re rutz'etik sik'inïk
-# LOCALIZATION NOTE(readingList.prepopulatedArticles.learnMore):
-# This will show as an item in the Reading List, and will link to a SUMO article describing Sync:
-#   https://support.mozilla.org/kb/how-do-i-set-up-firefox-sync
-# %S is syncBrandShortName
-readingList.prepopulatedArticles.supportSync = Katok pa ri rucholb'al asik'inik xa b'a akuchi' rik'in ri %S
 
 # LOCALIZATION NOTE (e10s.offerPopup.mainMessage
 #                    e10s.offerPopup.highlight1
