--- a/cak/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/cak/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -97,6 +97,8 @@ quit-button.tooltiptext.mac = Tel pa %1$S (%2$S)
 # approval before you change it.
 loop-call-button3.label = Achike ab'anon
 loop-call-button3.tooltiptext = Titikirisäx jun tzijonem
+# LOCALIZATION NOTE(loop-call-button3-pb.tooltiptext): Shown when the button is
+# placed inside a Private Browsing window. %S is the value of loop-call-button3.label.
 
 social-share-button.label = Tikomonïx re ruxaq re'
 social-share-button.tooltiptext = Tikomonïx re ruxaq re'
@@ -115,4 +117,8 @@ devtools-webide-button2.tooltiptext = Tijaq WebIDE (%S)
 
 # LOCALIZATION NOTE(pocket-button.label, pocket-button.tooltiptext): "Pocket"
 # is a brand name.
+pocket-button.label = Pocket
+pocket-button.tooltiptext = Tiyak ri Pocket
 
+e10s-button.label = K'ak'a' Non-e10s Window
+e10s-button.tooltiptext = Tijaq jun k'ak'a' Non-e10s Window
