--- a/cak/browser/chrome/browser/loop/loop.properties
+++ b/cak/browser/chrome/browser/loop/loop.properties
@@ -9,8 +9,8 @@
 clientShortname2=Firefox Hello
 clientSuperShortname=Achike ab'anon
 
-rooms_tab_button_tooltip=Taq tzijonem
-contacts_tab_button_tooltip=Kib'i' achib'il
+rooms_tab_button=Taq tzijonem
+contacts_tab_button=Kib'i' achib'il
 
 ## LOCALIZATION_NOTE(sign_in_again_title_line_one, sign_in_again_title_line_two2):
 ## These are displayed together at the top of the panel when a user is needed to
@@ -55,16 +55,11 @@ problem_accessing_account=Xk'ulwachitäj jun k'ayewal toq yatok pa ri rub'i' ata
 ## the appropriate action.
 retry_button=Titojtob'ëx chik
 
-share_email_subject5={{clientShortname2}} — Tintunu' wi' pa ri tzijonem
-## LOCALIZATION NOTE (share_email_subject_context): This is the alternate email
-## subject when a conversation is shared with a context attached.
-## {{clientShortName2}} will be replaced with the respective string in this file.
-## {{title}} will be replaced with the title of an HTML document.
-share_email_subject_context={{clientShortname2}} Tzijonem: {{title}}
-## LOCALIZATION NOTE (share_email_body4): In this item, don't translate the
+## LOCALIZATION NOTE (share_email_body6): In this item, don't translate the
 ## part between {{..}} and leave the \n\n part alone
-## LOCALIZATION NOTE (share_email_body_context): In this item, don't translate
+## LOCALIZATION NOTE (share_email_body_context2): In this item, don't translate
 ## the part between {{..}} and leave the \n\n part alone.
+## LOCALIZATION NOTE (share_email_footer): Common footer content for both email types
 ## LOCALIZATION NOTE (share_tweeet): In this item, don't translate the part
 ## between {{..}}. Please keep the text below 117 characters to make sure it fits
 ## in a tweet.
@@ -115,6 +110,8 @@ valid_email_text_description=Tab'ana' utzil, tatz'ib'aj jun ütz rochochib'al ta
 ## panel.
 add_or_import_contact_title=Titz'aqatisäx o tik'am pe rub'i' achib'il
 import_contacts_button2=Tik'am pe pa ri Google
+## LOCALIZATION NOTE (import_contacts_button3): Text for button used to import
+## contacts into the contact list.
 importing_contacts_progress_button=Tajin nik'am…
 import_contacts_failure_message=Man tikirel ta xek'am pe jujun kib'i' taq achib'il. Tab'ana' utzil tatojtob'ej chik.
 ## LOCALIZATION NOTE(import_contacts_success_message): Success notification message
@@ -126,6 +123,10 @@ import_contacts_success_message={{total}} ütz xk'am pe rub'i' achib'il.;{{total
 ## LOCALIZATION NOTE(sync_contacts_button): This button is displayed in place of
 ## importing_contacts_button once contacts have been imported once.
 sync_contacts_button=Kexim kib'i' taq achib'il
+## LOCALIZATION NOTE(no_contacts_message_heading): Title shown when user has no
+## contacts in his address book
+## LOCALIZATION NOTE(no_contacts_import_or_add): Subheading inviting the user
+## to add people to his contact list
 
 ## LOCALIZATION NOTE(import_failed_description simple): Displayed when an import of
 ## contacts fails. This is displayed in the error field.
@@ -136,13 +137,16 @@ import_failed_support_button=To'ïk
 ## LOCALIZATION NOTE(remove_contact_menu_button2): Displayed in the contact list in
 ## a pop-up menu next to the contact's name.
 remove_contact_menu_button2=Tisilöx chik el rub'i' achib'il…
+## LOCALIZATION NOTE(remove_contact_title): Displayed in the contact list in
+## a pop-up menu next to the contact's name.
 ## LOCALIZATION NOTE(confirm_delete_contact_alert): This is an alert that is displayed
 ## to confirm deletion of a contact.
 confirm_delete_contact_alert=¿La kan nawajo' nayüj el re rub'i' achib'il re'?
 ## LOCALIZATION NOTE(confirm_delete_contact_remove_button, confirm_delete_contact_cancel_button):
 ## These are displayed on the alert with confirm_delete_contact_alert
-confirm_delete_contact_remove_button=Tisilöx chik el ri rub'i' achib'il
 confirm_delete_contact_cancel_button=Tiq'at
+## LOCALIZATION NOTE(contact_list_title): This is in uppercase in English for
+## emphasis, please do what is appropriate for specific locales.
 
 ## LOCALIZATION NOTE(block_contact_menu_button): Displayed in the contact list in
 ## a pop-up menu next to the contact's name, used to block a contact from calling
@@ -194,6 +198,7 @@ incoming_call_cancel_button=Tiq'at
 incoming_call_cancel_and_block_button=Tiq'at chuqa' tiq'eleb'ëx
 incoming_call_block_button=Tiq'eleb'ëx
 
+
 ## LOCALIZATION NOTE (call_with_contact_title): The title displayed
 ## when calling a contact. Don't translate the part between {{..}} because
 ## this will be replaced by the contact's name.
@@ -227,18 +232,12 @@ call_progress_connecting_description=Tajin nixim…
 ## parts between {{..}} because these will be replaced with links with the labels
 ## from legal_text_tos and legal_text_privacy. clientShortname will be replaced
 ## by the brand name.
-  and {{privacy_notice}}.
 
 ## LOCALIZATION NOTE (powered_by_beforeLogo, powered_by_afterLogo):
 ## These 2 strings are displayed before and after a 'Telefonica'
 ## logo.
 powered_by_afterLogo=
 
-feedback_category_other2=Juley chik
-## LOCALIZATION NOTE (feedback_window_will_close_in2):
-## Semicolon-separated list of plural forms. See:
-## http://developer.mozilla.org/en/docs/Localization_and_Plurals
-## In this item, don't translate the part between {{..}}
 ## LOCALIZATION_NOTE (feedback_rejoin_button): Displayed on the feedback form after
 ## a signed-in to signed-in user call.
 ## LOCALIZATION NOTE (feedback_report_user_button): Used to report a user in the case of
