--- a/cak/browser/chrome/browser/migration/migration.properties
+++ b/cak/browser/chrome/browser/migration/migration.properties
@@ -18,6 +18,7 @@ importedSafariReadingList=Rucholajem taq sik'inem (richin ri Safari)
 # Note: When adding an import source for profile reset, add the string name to
 # resetProfile.js if it should be listed in the reset dialog.
 1_ie=Taq rucha'oj K'amaya'l
+1_edge=Nuk’ulem
 1_safari=Taq cha'oj
 1_chrome=Taq cha'oj
 
@@ -41,7 +42,6 @@ importedSafariReadingList=Rucholajem taq sik'inem (richin ri Safari)
 16_chrome=Ewan taq tzij eyakon
 16_firefox=Ewan taq tzij eyakon
 
-32_ie=Taq utziläj
 32_safari=Taq retal
 32_chrome=Taq retal
 
