--- a/cak/browser/chrome/browser/tabbrowser.properties
+++ b/cak/browser/chrome/browser/tabbrowser.properties
@@ -29,3 +29,8 @@ tabs.closeWarningTitle=Jikïl richin rutz’apixik
 tabs.closeWarningMultiple=;B'ama natz'apij 1# ruwi’ ¿Kan ja ri’ nawajo’?
 tabs.closeButtonMultiple=Rutz’apixik taq ruwi’
 tabs.closeWarningPromptMe=Tatzijoj pe we tajin nintz’apij k’ïy taq ruwi’
+
+# LOCALIZATION NOTE (tabs.muteAudio.tooltip):
+# %S is the keyboard shortcut for "Mute tab"
+# LOCALIZATION NOTE (tabs.unmuteAudio.tooltip):
+# %S is the keyboard shortcut for "Unmute tab"
