--- a/cak/dom/chrome/accessibility/AccessFu.properties
+++ b/cak/dom/chrome/accessibility/AccessFu.properties
@@ -74,8 +74,10 @@ definitionlist =       rucholajem taq q'ajarib'äl
 term           =       tzij
 definition     =       q'ajarib'äl
 
+
 # More sophisticated roles which are not actual numeric roles
 textarea       =       ruk'ojlemal rucholajem tzij
+
 
 # Text input types
 textInputType_date   =       ruq'ijul
@@ -186,6 +188,9 @@ quicknav_Separator   = Taq jachöy
 quicknav_Table       = Taq retal rucholajil
 quicknav_Checkbox    = Taq ruk'ojlemal cha'oj
 
+# MathML menclose notations.
+# See developer.mozilla.org/docs/Web/MathML/Element/menclose#attr-notation
+
 # Shortened role names for braille
 menubarAbbr        =       Rumolsamaj kutüy samaj
 scrollbarAbbr      =       Rukajtz'ik silonel
@@ -198,7 +203,6 @@ dialogAbbr         =       tzijonem
 separatorAbbr      =       jachöy
 toolbarAbbr        =       molsamajib'äl
 statusbarAbbr      =       Molb'anikil
-tableAbbr          =       etchol
 columnheaderAbbr   =       rujub'i'aj tem
 rowheaderAbbr      =       Rujub'i'aj cholaj
 columnAbbr         =       tem
@@ -269,3 +273,6 @@ stateCheckedAbbr = (x)
 stateUncheckedAbbr = ( )
 statePressedAbbr = (x)
 stateUnpressedAbbr = ( )
+
+
+
