--- a/cak/browser/chrome/browser/devtools/debugger.properties
+++ b/cak/browser/chrome/browser/devtools/debugger.properties
@@ -31,6 +31,7 @@ DebuggerWindowScriptTitle=Ruxak'ak'inel okik'amaya'l - %S
 # This string is displayed in the tooltip of the tab when the debugger is
 # displayed inside the developer tools window..
 # A keyboard shortcut for JS Debugger will be shown inside brackets.
+ToolboxDebugger.tooltip2=JavaScript Chojmirisanel (%S)
 
 # LOCALIZATION NOTE (debuggerMenu.commandkey, debuggerMenu.accesskey)
 # Used for the menuitem in the tool menu
@@ -79,6 +80,7 @@ noGlobalsText=Majun aj ronojel
 
 # LOCALIZATION NOTE (noWorkersText): The text to display in the workers list
 # when there are no workers.
+noWorkersText=Majun samajela' e k'o chupam re ruxaq k'amaya'l re'.
 
 # LOCALIZATION NOTE (noSourcesText): The text to display in the sources list
 # when there are no sources.
