--- a/cak/browser/chrome/browser/devtools/inspector.properties
+++ b/cak/browser/chrome/browser/devtools/inspector.properties
@@ -48,6 +48,7 @@ inspector.panelLabel.markupView=Rutz'etik Kajtz'ikun
 # Keyboard shortcut for DOM and Style Inspector will shown inside brackets.
 markupView.more.showing=Jujun taq wiqoj xe'ewäx kan.
 markupView.more.showAll=ketz'et konojel ri %S taq wiqoj
+inspector.tooltip2=DOM chuqa' nik'onel rub'anikil (%S)
 
 #LOCALIZATION NOTE: Used in the image preview tooltip when the image could not be loaded
 previewTooltip.image.brokenImage=Man xtikïr ta xusamajib'ej ri wachib'äl
