--- a/cak/browser/chrome/browser/devtools/netmonitor.properties
+++ b/cak/browser/chrome/browser/devtools/netmonitor.properties
@@ -28,6 +28,7 @@ netmonitor.accesskey=K
 # This string is displayed in the tooltip of the tab when the Network Monitor is
 # displayed inside the developer tools window.
 # Keyboard shortcut for Network Monitor will be shown inside the brackets.
+netmonitor.tooltip2=Rujolom K'amab'ey (%S)
 
 # LOCALIZATION NOTE (netmonitor.security.state.secure)
 # This string is used as an tooltip for request that was performed over secure
@@ -177,6 +178,10 @@ networkMenu.sizeKB=%S KB
 # in the network menu specifying the transferred size of a request is
 # unavailable.
 networkMenu.sizeUnavailable=—
+
+# LOCALIZATION NOTE (networkMenu.sizeCached): This is the label displayed
+# in the network menu specifying the transferred of a request is
+# cached.
 
 # LOCALIZATION NOTE (networkMenu.totalMS): This is the label displayed
 # in the network menu specifying the time for a request to finish (in milliseconds).
