--- a/cak/browser/chrome/browser/newTab.properties
+++ b/cak/browser/chrome/browser/newTab.properties
@@ -34,25 +34,9 @@ newtab.suggested.explain=Nichilab'ëx re ruxaq k'amaya'l re' chawe ruma ri Mozil
 # the gear icon used to customize the new tab window. %2$S will be replaced by
 # an active link using string newtab.learn.link as text.
 newtab.enhanced.explain=Jun rachib'il Mozilla xrutzilaj re ch'utin tz'etolil ri nujalwachij ri chapoj ruwäch. Yatikïr ye'achüp ri taq utzilan taq ch'utin rik'in ri napïtz pa ri pitz'ib'äl %1$S richin yatok pa ri taq ajowanïk. %2$S
-# LOCALIZATION NOTE(newtab.intro.paragraph2): %1$S will be replaced inline by
-# active link using string newtab.privacy.link as text.
-newtab.intro.paragraph2=Ruma niqaya' chawäch re samaj re', Mozilla numöl chuqa' norikisaj jujun ch'ob'otel taq etamab'äl pa ruwi' rub'eyal ye'awokisaj ri taq ch'utin, ri nub'ij ri %1$S qichin.
-# LOCALIZATION NOTE(newtab.intro.paragraph4.2): %1$S will be replaced inline by
-# the gear icon used to customize the new tab window. %2$S will be replaced by
-# newtab.intro.controls as text. The quoted strings should be the same as
-# newtab.customize.cog.enhanced.
-# LOCALIZATION NOTE(newtab.intro.paragraph6): %1$S will be replaced by
-# newtab.intro.paragraph6.remove as bold text. %2$S will be replaced by
-# newtab.intro.paragraph6.pin as bold text
-# LOCALIZATION NOTE(newtab.intro.paragraph8): %1$S will be replaced by
-# brandShortName as text. %2$S will be replaced inline by an active link using
-# string newtab.learn.link as text.
-# LOCALIZATION NOTE(newtab.intro.controls): the controls in the gear icon
-# menu for customizing the new tab window. Used in newtab.intro.paragraph4
+# LOCALIZATION NOTE(newtab.intro1.paragraph2): %1$S will be replaced inline by
+# an active link using string newtab.privacy.link as text. %2$S will be replaced
+# inline by the gear icon used to customize the new tab window.
 newtab.learn.link=Tetamäx ch'aqa' chik…
 newtab.privacy.link=Ichinan na'oj
-# LOCALIZATION NOTE(newtab.intro.header.welcome): %1$S will be replaced by
-# brandShortName as bold text.
-newtab.intro.back=Chi rij
-newtab.intro.next=Jun chik
 newtab.intro.gotit=¡K'o chik wik'in!
