--- a/cak/dom/chrome/dom/dom.properties
+++ b/cak/dom/chrome/dom/dom.properties
@@ -65,9 +65,6 @@ nsIJSONDecodeDeprecatedWarning=nsIJSON.decode ojer chik.   Tab'ana' utzil, pa ru
 nsIJSONEncodeDeprecatedWarning=nsIJSON.encode ojer chik.   Tab'ana' utzil, pa ruk'exel tawokisaj JSON.stringify.
 nsIDOMWindowInternalWarning=Ojer chik nokisäx ri nsIDOMWindowInternal. Pa ruk'exel tawokisaj ri nsIDOMWindow.
 InputEncodingWarning=Ojer chik tokisäx pe ri inputEncoding.
-# LOCALIZATION NOTE: Do not translate "MozBeforePaint" and "mozRequestAnimationFrame"
-MozBeforePaintWarning=Ri taq molojri'ïl MozBeforePaint man yek'ul ta chik. Rajowaxik nik'o jun rutzijol majun ri "callback" pa mozRequestAnimationFrame.
-FullScreenDeniedBlocked=Xq'at ri ruk'utuxik richin chijun ruwäch ruma re jun dominio re' q'aton richin chijun ruwäch ruma ri winäq.
 FullScreenDeniedDisabled=Ri ruk'utuxik chijun ruwäch man xk'ulutäj ta ruma chi ri API richin ri chijun ruwäch man tzijïl ta pa ri taq  rajowaxik winäq.
 FullScreenDeniedFocusedPlugin=Ri ruk'utuxik chijun ruwäch xq'at ruma chi jun pluyin pa tzuwäch tajin nitz'et.
 FullScreenDeniedHidden=Xq'at ri ruk'utuxik chijun ruwäch ruma man niq'alajin tachik ri wuj.
@@ -158,11 +155,16 @@ ImportXULIntoContentWarning=Man ütz ta nitz'et nik'am pe ri wiqoj XUL chupam ju
 XMLDocumentLoadPrincipalMismatch=Man ütz ta nokisäx ri document.load pa taq wuj ri epetenäq pa ch'aqa' chik taq tzuwäch. Xa xe ri jun wuj xnuk' pa jun tzuwäch nitikïr nroyoj ri .load pa ri wuj ri'. Pa ruk'exel ruk'amon nokisäx ri XMLHttpRequest.
 # LOCALIZATION NOTE: Do not translate "IndexedDB".
 IndexedDBTransactionAbortNavigation=Ri samaj IndexedDB, ri k'a majani nitz'aqät, xtane' ruma ri okem pa taq ruxaq k'amaya'l.
-# LOCALIZATION NOTE (WillChangeBudgetWarning): Do not translate Will-change, %1$S,%2$S,%3$S are numbers.
-WillChangeBudgetWarning=Ri rokisaxik ri rupam rujolom Will-change janila nïm. Ri rulewal ruwäch ruk'wa'an %1$S taq piksel, ri rutzijol rajil ja ri rulewal ruwäch ri wuj tikon el rik'in %2$S (%3$S taq piksel). Ronoje akuchi' xtiq'alajin pe ri will-change pa wuj choj xkerepüx we nik'o chuwäch ri rutzijol rajil.
+# LOCALIZATION NOTE: Do not translate Will-change, %1$S,%2$S,%3$S are numbers.
 # LOCALIZATION NOTE: Do not translate "ServiceWorker".
 HittingMaxWorkersPerDomain=Man anin ta xutikirisaj el jun ServiceWorker ruma  ka'i' oxi' taq wuj pa ri junam k'ojlemal tajin chik nikokisaj jarupe' samajela' yetikïr ye'okisan richin. Ri ServiceWorker rucholajin apo ri' ruma ri' xtitikïr el toq jun chi ke ri samajela' xtuk'isib'ej.
 # LOCALIZATION NOTE: Do no translate "setVelocity", "PannerNode", "AudioListener", "speedOfSound" and "dopplerFactor"
 PannerNodeDopplerWarning=Ri rokisaxik setVelocity pa ri PannerNode chuqa' AudioListener, chuqa' speedOfSound chuqa' dopplerFactor pa AudioListener man ye'okisäx ta chik ruma ri' xkeyuj el taq ch'akulal ri'. Richin nawïl ch'aqa' chik taq to'ïk kab'etz'eton pa https://developer.mozilla.org/en-US/docs/Web/API/AudioListener#Deprecated_features
 # LOCALIZATION NOTE: Do not translate "Worker".
 EmptyWorkerSourceWarning=Ri rutojtob'exik richin ninuk' jun samajel rik'in jamäl tz'ib'anem. Re re', rik'in jub'a', man pa rub'anikil ta.
+# LOCALIZATION NOTE: Do not translate "ServiceWorker".
+# LOCALIZATION NOTE: Do not translate "ServiceWorker", "FetchEvent.respondWith()", "opaque", or "Response".
+# LOCALIZATION NOTE: Do not translate "ServiceWorker", "FetchEvent.respondWith()", "FetchEvent.request.type", "same-origin", "cors", "no-cors", "opaque", "Response", or "RequestMode".
+# LOCALIZATION NOTE: Do not translate "ServiceWorker", "Error", "Response", "FetchEvent.respondWith()", or "fetch()".
+# LOCALIZATION NOTE: Do not translate "ServiceWorker", "Response", "FetchEvent.respondWith()", or "Response.clone()".
+# LOCALIZATION NOTE: Do not translate "ServiceWorker", "Response", "FetchEvent.respondWith()", "FetchEvent.request", or "Worker".
