--- a/cak/toolkit/chrome/global/intl.properties
+++ b/cak/toolkit/chrome/global/intl.properties
@@ -30,7 +30,7 @@ general.useragent.locale=Maya Kaqchikel
 # British English in their list, since those languages are commonly spoken in
 # the same area as Breton:
 # intl.accept_languages=br, fr-FR, fr, en-GB, en
-intl.accept_languages=kaq, es-MX, es, en-US
+intl.accept_languages=Maya-KAQ, kaq
 
 # LOCALIZATION NOTE (font.language.group):
 # This preference controls the initial setting of the language drop-down menu
@@ -38,7 +38,7 @@ intl.accept_languages=kaq, es-MX, es, en-US
 #
 # Set it to the value of one of the menuitems in the "selectLangs" menulist in
 # http://mxr.mozilla.org/mozilla/source/browser/components/preferences/fonts.xul
-font.language.group=x-occidental
+font.language.group=x-ruqajb'al q'ij
 
 # LOCALIZATION NOTE (intl.charset.detector):
 # This preference controls the initial setting for the character encoding
@@ -46,7 +46,7 @@ font.language.group=x-occidental
 # for Russian and ukprob for Ukrainian and the empty string to turn detection
 # off. The value must be empty for locales other than Japanese, Russian and
 # Ukrainian.
-intl.charset.detector=x-occidental
+intl.charset.detector=x-ruqajb'al q'ij
 
 # LOCALIZATION NOTE (pluralRule): Pick the appropriate plural rule for your
 # language. This will determine how many plural forms of a word you will need
@@ -58,4 +58,4 @@ pluralRule=1
 # Valid values are: true, false, <empty string>
 # Missing preference or empty value equals false.
 intl.menuitems.alwaysappendaccesskeys=1
-intl.menuitems.insertseparatorbeforeaccesskeys=true
+intl.menuitems.insertseparatorbeforeaccesskeys=qitzij
