--- a/cak/toolkit/chrome/passwordmgr/passwordmgr.properties
+++ b/cak/toolkit/chrome/passwordmgr/passwordmgr.properties
@@ -5,6 +5,8 @@
 rememberValue = Tokisäx ri nuk'unel kichin ewan taq tzij richin ninatäx re etal re'.
 rememberPassword = Tokisäx ri nuk'unel richin ewan taq  tzij richin ninatäx re etal re'.
 savePasswordTitle = Tajikib'a'
+# LOCALIZATION NOTE (rememberLoginMsg, rememberLoginMsgNoUser): %S is brandShortName
+updateLoginButtonText = Tik'ex
 # LOCALIZATION NOTE (rememberPasswordMsg):
 # 1st string is the username for the login, 2nd is the login's hostname. 
 # Note that long usernames may be truncated.
@@ -14,7 +16,6 @@ rememberPasswordMsg = ¿La nawajo' nayäk kan ri ewan tzij richin "%1$S" pa %2$S
 rememberPasswordMsgNoUsername = ¿La nawajo' nayäk kan ri ewan tzij pa %S?
 # LOCALIZATION NOTE (noUsernamePlaceholder):
 # This is displayed in place of the username when it is missing.
-noUsernamePlaceholder=Majun rub'i' winäq
 # LOCALIZATION NOTE (showPasswordPlaceholder):
 # This is displayed in the password field to indicate that the password will be
 # shown if focused.
@@ -26,14 +27,12 @@ notifyBarNeverRememberButtonText = Man jub'ey tinatäx ri ewan tzij richin re ru
 notifyBarNeverRememberButtonAccessKey = e
 rememberButtonText = &Tinatäx
 notifyBarRememberPasswordButtonText = Tinatäx ri ewan tzij
-notifyBarRememberPasswordButtonAccessKey = R
 passwordChangeTitle = Tajikib'a' ri ruk'exik ewan tzij
 # LOCALIZATION NOTE (updatePasswordMsg):
 # String is the username for the login.
 updatePasswordMsg = ¿La nawajo' nak'ëx ruwäch ri ewan tzij richin "%S"?
 updatePasswordMsgNoUser = ¿La nawajo' nak'ëx ruwäch ri ewan tzij k'o wakami?
 notifyBarUpdateButtonText = Tik'ex ruwäch ri ewan tzij
-notifyBarUpdateButtonAccessKey = U
 notifyBarDontChangeButtonText = Man tik'ex
 notifyBarDontChangeButtonAccessKey = O
 userSelectText = Tab'ana' utzil, tajikib'a' rub'i' ri winäq achoq chi re xtak'ex ri ewan rutzij
@@ -46,3 +45,9 @@ removeAllPasswordsPrompt=¿At jikïl chi nawajo' ye'ayüj el konojel ri ewan taq
 removeAllPasswordsTitle=Keyuj konojel ri ewan taq tzij
 loginsSpielAll=E yakäl ewan taq tzij pan akematz'ib' kichin re jujun taq ruxaq k'amaya'l re':
 loginsSpielFiltered=Re jujun ewan taq tzij re', nikik'äm ki' rik'in ri nakanoj:
+# LOCALIZATION NOTE (loginHostAge):
+# This is used to show the context menu login items with their age.
+# 1st string is the username for the login, 2nd is the login's age.
+loginHostAge=%1$S (%2$S)
+# LOCALIZATION NOTE (noUsername):
+# String is used on the context menu when a login doesn't have a username.
