l10:lij AccessFu new translation

--- a/lij/dom/chrome/accessibility/AccessFu.properties
+++ b/lij/dom/chrome/accessibility/AccessFu.properties
@@ -165,3 +165,111 @@ textInputType_tel = telefono
 textInputType_url = URL
 textInputType_date = dæta
 unselectAction = no seleçionou
+
+
+notation-longdiv = divixon longa
+notation-actuarial = atoâ
+notation-phasorangle = angolo fazô
+notation-radical = radicale
+notation-box = riquaddro
+notation-roundedbox = riquaddro con angoli tondi
+notation-circle = çercio
+notation-left = mancinn-a
+notation-right = drita
+notation-top = erto
+notation-bottom = basso
+notation-updiagonalstrike = bara diagonale in sciù
+notation-downdiagonalstrike = bara diagonale in zu
+notation-verticalstrike = bara verticale
+notation-horizontalstrike = barra orizontale
+notation-updiagonalarrow = freccia diagonale in sciù
+notation-madruwb = madruwb
+menubarAbbr = bara menû
+scrollbarAbbr = bara scorimento
+gripAbbr = preza
+alertAbbr = aviso
+menupopupAbbr = menû popup
+documentAbbr = documento
+paneAbbr = riquaddro
+dialogAbbr = dialogo
+separatorAbbr = separatô
+toolbarAbbr = bara strumenti
+statusbarAbbr = bara stato
+tableAbbr = tabella
+columnheaderAbbr = intest. colònna
+rowheaderAbbr = intest. riga
+columnAbbr = colònna
+rowAbbr = riga
+cellAbbr = çella
+listAbbr = elenco
+listitemAbbr = elem. elenco
+outlineAbbr = erbo
+outlineitemAbbr = elem. erbo
+pagetabAbbr = feuggio
+propertypageAbbr = pag. proprietæ
+graphicAbbr = grafica
+checkbuttonAbbr = cazella contròllo
+radiobuttonAbbr = pomello radio
+comboboxAbbr = cazella combin.
+progressbarAbbr = indic. stæto
+sliderAbbr = disp. scorimento
+spinbuttonAbbr = pomello seleç.
+diagramAbbr = diagramma
+animationAbbr = animaçion
+equationAbbr = equaçion
+buttonmenuAbbr = pomello menû
+whitespaceAbbr = spaçio veuo
+pagetablistAbbr = elenco feuggi
+canvasAbbr = canvas
+checkmenuitemAbbr = voxe menû con sponta
+labelAbbr = etichetta
+radiomenuitemAbbr = elem. menû radio
+textcontainerAbbr = contenitô testo
+togglebuttonAbbr = interotô
+treetableAbbr = tabella erbo
+headerAbbr = intestaç.
+footerAbbr = pê
+paragraphAbbr = paragrafo
+entryAbbr = voxe
+captionAbbr = didascalia
+headingAbbr = titolo
+sectionAbbr = seçion
+formAbbr = modolo
+comboboxlistAbbr = elenco cazellae combinâ
+comboboxoptionAbbr = elem. casella combinâ
+listboxoptionAbbr = opçion
+listboxAbbr = cazella riepilogo
+flatequationAbbr = equaçion flat
+gridcellAbbr = çella da griglia
+noteAbbr = nòtta
+figureAbbr = fig
+definitionlistAbbr = lista definiçioin
+termAbbr = term.
+definitionAbbr = definiç.
+tblColumnInfoAbbr = #1c;#1c
+tblRowInfoAbbr = #1r;#1r
+stateCheckedAbbr = (x)
+stateUncheckedAbbr = ( )
+statePressedAbbr = (x)
+stateUnpressedAbbr = ( )
+mathmlenclosedAbbr = drento
+mathmltableAbbr = tabella
+mathmlcellAbbr = çella
+mathmlfractionAbbr = fraz.
+mathmlfractionwithoutbarAbbr = fraz. senza barra
+mathmlrootAbbr = reixe
+mathmlscriptedAbbr = corsivo
+mathmlsquarerootAbbr = rei. quad.
+baseAbbr = baze
+close-fenceAbbr = seramento
+denominatorAbbr = den.
+numeratorAbbr = num.
+open-fenceAbbr = avertua
+overscriptAbbr = sovrascr.
+presubscriptAbbr = pre-sotoscr.
+presuperscriptAbbr = pre-sorviascr.
+root-indexAbbr = indice
+subscriptAbbr = pedice
+superscriptAbbr = apice
+underscriptAbbr = sottoscr.
+
