l10:lij browser.property new translation

--- a/lij/browser/chrome/browser/browser.properties
+++ b/lij/browser/chrome/browser/browser.properties
@@ -27,16 +27,6 @@ xpinstallDisabledMessage=L'instalaçion do software a l'é dizabilita. Sciacca A
 xpinstallDisabledButton=Abilita
 xpinstallDisabledButton.accesskey=A
 
-# LOCALIZATION NOTE (addonDownloading, addonDownloadCancelled, addonDownloadRestart):
-# Semi-colon list of plural forms. See:
-# http://developer.mozilla.org/en/docs/Localization_and_Plurals
-# Also see https://bugzilla.mozilla.org/show_bug.cgi?id=570012 for mockups
-addonDownloading=Descarego o conponente azonto;Descarego i conponenti azonti
-addonDownloadCancelled=Descaregamento do conponente azonto scancelou.;Descaregamento di conponenti azonti scancelæ.
-addonDownloadRestart=Fanni ripartî o descaregamento;Fanni ripartî i descaregamenti;
-addonDownloadRestart.accessKey=r
-addonDownloadCancelTooltip=Anulla
-
 # LOCALIZATION NOTE (addonsInstalled, addonsInstalledNeedsRestart):
 # Semi-colon list of plural forms. See:
 # http://developer.mozilla.org/en/docs/Localization_and_Plurals
@@ -45,24 +35,23 @@ addonsInstalled=#1 o l'é stæto instalou ben.;#2 conponenti azonti son stæti i
 addonsInstalledNeedsRestart=#1 saiâ instalou dòppo che ti arvi torna #3.;#2 conponenti azonti saian instalæ dòppo che ti arvi torna #3.
 addonInstallRestartButton=Arvi torna Òua
 addonInstallRestartButton.accesskey=R
+addonDownloadingAndVerifying = Descaregamento e verifica conp. azonto…;Descaregamento e verifica #1 comp. azonti…
+addonDownloadVerifying = Verifica in corso
 
-
-# LOCALIZATION NOTE (addonError-1, addonError-2, addonError-3, addonError-4):
-# #1 is the add-on name, #2 is the host name, #3 is the application name
-# #4 is the application version
-addonError-1=O conponente azonto o no peu ese descarigou perché a conescion a #2 a no fonçionn-a.
-addonError-2=O conponente azonto de #2 o no peu ese instalou perché no và d'acòrdio co-o conponente azonto #3.
-addonError-3=O conponente azonto descarigou da #2 o no peu ese instalou perché o pâ aroinou.
-addonError-4=#1 o no peu ese instalou perché o #3 o no peu modificâ in file.
+addonInstallError-1 = Inposcibile scaregâ o conponente azonto perché gh'é 'n'erô inta conescion.
+addonInstallError-2 = Inposcibile instalâ o conponente azonto perché o no corisponde a quello che m'aspetavo da %1$S.
+addonInstallError-3 = Inposcibile instalâ o conponente azonto scaregou da sto scito perché o file o l'é aroinou.
+addonInstallError-4 = Inposcibile instalâ %2$S perché %1$S o no l'é in graddo de cangiâ o file domandou.
+addonInstallError-5 = L’instalaçion de 'n conponente azonto no verificou a l'é stta blocâ da %1$S.
 
 # LOCALIZATION NOTE (addonLocalError-1, addonLocalError-2, addonLocalError-3, addonLocalError-4, addonErrorIncompatible, addonErrorBlocklisted):
 # #1 is the add-on name, #3 is the application name, #4 is the application version
-addonLocalError-1=Sto conponente azonto o no peu ese instalou perché o gh'é 'n'erô into scistema di file.
-addonLocalError-2=Sto conponente azonto o no peu ese instalou perché o no va ben co-o conponente azonto #3.
-addonLocalError-3=Sto conponente azonto o no peu ese instalou perché o pâ aroinou.
-addonLocalError-4=#1 o no peu ese instalou perché o #3 o no peu modificâ in file.
-addonErrorIncompatible=#1 no se peu instalâ perché o no l'é conpatibile con #3 #4.
-addonErrorBlocklisted=#1 no l'é stæto instalou perché o gh'à 'n'erto reizeigo de caozâ problemi de stabilitæ ò de seguessa.
+addonLocalInstallError-1 = Inposcibile instalâ sto conponente azonto perché gh'é 'n'erô into filesystem.
+addonLocalInstallError-2 = Inposcibile instalâ sto conponente azonto perché o no corisponde a quello che m'aspetavo da %1$S.
+addonLocalInstallError-3 = Inposcibile instalâ sto conponente azonto perché o l'é aroinou.
+addonLocalInstallError-4 = Inposcibile instalâ %2$S perché %1$S o no l'é in graddo de cangiâ o file domandou.
+addonLocalInstallError-5 = Inposcibile instalâ sto conponente azonto perché o no l'é verificou.
+
 
 # LOCALIZATION NOTE (lwthemeInstallRequest.message): %S will be replaced with
 # the host name of the site.
@@ -438,23 +427,70 @@ pluginContinueBlocking.label = Continoa blòcco
 pluginContinueBlocking.accesskey = b
 
 
-bookmarksMenuButton.tooltip = Visualizza i segnalibri (%S)
-customizeTips.tip0 = %1$S: è possibile personalizzare %2$S per adattarlo al proprio modo di lavorare. Trascina gli elementi visualizzati nel menu o nella barra degli strumenti. %3$S sulla personalizzazione di %2$S.
-customizeTips.tip0.hint = Suggerimento
-customizeTips.tip0.learnMore = Ulteriori informazioni
-fullscreenButton.tooltip = Visualizza la finestra a schermo intero (%S)
-getUserMedia.continueSharing.label = Continua a condividere
+bookmarksMenuButton.tooltip = Amia i segnalibbri (%S)
+customizeTips.tip0 = %1$S: ti peu personalizâ %2$S pe adatalo a-o teu mòddo de travaigiâ. Rebela i elementi mostæ into menû ò inta bara di strumenti. %3$S in sciâ personalizaçion de %2$S.
+customizeTips.tip0.hint = Conseggio
+customizeTips.tip0.learnMore = Atre informaçioin
+fullscreenButton.tooltip = Mostra o barcon a tutto schermo (%S)
+getUserMedia.continueSharing.label = Continoa a condividde
 getUserMedia.continueSharing.accesskey = C
-getUserMedia.stopSharing.label = Interrompi condivisione
+getUserMedia.stopSharing.label = Ferma condivixon
 getUserMedia.stopSharing.accesskey = I
-menuRestoreAllTabsSubview.label = Ripristina schede chiuse
-menuRestoreAllWindowsSubview.label = Ripristina finestre chiuse
-newWindowButton.tooltip = Apri una nuova finestra (%S)
-printButton.tooltip = Stampa questa pagina… (%S)
-starButtonOverflowed.label = Aggiungi link nei segnalibri
-starButtonOverflowedStarred.label = Modifica segnalibro
-tabviewButton.tooltip = Raggruppa le schede (%S)
-update.downloadAndInstallButton.label = Aggiorna a %S
+menuRestoreAllTabsSubview.label = Repiggia feuggi seræ
+menuRestoreAllWindowsSubview.label = Repiggia barcoin seræ
+newWindowButton.tooltip = Arvi 'n neuvo barcon (%S)
+printButton.tooltip = Stanpa sta pagina… (%S)
+starButtonOverflowed.label = Azonzi volegmaento inti segnalibbri
+starButtonOverflowedStarred.label = Cangia segnalibbro
+tabviewButton.tooltip = Amuggia i feuggi (%S)
+update.downloadAndInstallButton.label = Agiorna a %S
 update.downloadAndInstallButton.accesskey = A
+addonConfirmInstall.message = Sto scito o voeiva instalâ 'n conponente azonto in #1;Sto scito o voeiva instalâ #2 conponenti azonti in #1
+addonConfirmInstallUnsigned.message = Atençion: sto scito o voeiva instalâ un conponente azonto no verificæ in #1. Procede con caotela.;Atençion: sto scito voeiva instalâ #2 componenti azonti no verificæ in #1. Procede con caotela.
+addonConfirmInstallSomeUnsigned.message = ;Atençion: sto scito o voeiva instalâ #2 componenti azonti in #1, quarchedun di quæ o no l'é verificou. Procede con caotela.
+
+addonInstall.acceptButton.label = Installa
+addonInstall.acceptButton.accesskey = I
+addonInstall.cancelButton.label = Anulla
+addonInstall.cancelButton.accesskey = A
+addonInstall.unsigned = (no verificou)
+addonInstallErrorBlocklisted = Inposcibile instalâ %S perché gh'é 'n'erto reizego pe a stabilitæ ò seguessa.
+addonInstallErrorIncompatible = Inposcibile instalâ %3$S perché o no l'é conpatibile con %1$S %2$S.
+addonwatch.disable.label = Dizativa %S
+addonwatch.ignorePerm.label = Ignòra de longo
+addonwatch.ignorePerm.accesskey = n
+addonwatch.ignoreSession.label = Ignòra tenporaneamente
+addonwatch.ignoreSession.accesskey = I
+addonwatch.restart.label = Arvi torna %S
+addonwatch.restart.accesskey = R
+addonwatch.restart.message = Bezeugna arvî torna %2$S pe dizativâ %1$S
+addonwatch.slow = O fonçionamento de %2$S o porieiva ese ralentou da %1$S
+appmenu.downloadUpdateButton.label = Scarega agiornamento
+appmenu.restartBrowserButton.label = Arvi torna %S
+appmenu.restartNeeded.description = Arvi torna %S pe istalâ i agiornamenti
+appmenu.updateFailed.description = Agiornamento aotomatico no ariescio, bezeugna scaregâ l’agiornamento
+badContentBlocked.blocked.message = Quarche contegnuo in sta pagina o l'é stæto blocou da %S.
+badContentBlocked.notblocked.message = Nisciun contegnuo in sta pagina o l'é oua blocou da %S.
+ctrlTab.listAllTabs.label = ;Elenca tutti i #1 feuggi
+deveditionTheme.name = Ediçion pe-i Svilopatoî
+downloads.tooltip = Mostra l’avansamento di descaregamenti in corso (%S)
+e10s.offerPopup.mainMessage = %S fito o saiâ a moltiprocesso. L'é poscibile iniçiâ a deuviâ sta modalitæ ancheu e avei acesso in anteprimma a megioramenti comme:
+e10s.offerPopup.highlight1 = Magiô reativitæ
+e10s.offerPopup.highlight2 = Meno fermæ anòmale
+e10s.offerPopup.enableAndRestart.label = Ativa e arvi torna
+e10s.offerPopup.enableAndRestart.accesskey = A
+e10s.offerPopup.noThanks.label = No graçie
+e10s.offerPopup.noThanks.accesskey = N
+e10s.postActivationInfobar.message = Oua ti contriboisci a-o test da modalitæ moltiprocesso de %S. No ascordâ de segnalâ tutti i problemi riscontræ.
+e10s.postActivationInfobar.learnMore.label = Atre informaçioin
+e10s.postActivationInfobar.learnMore.accesskey = U
+e10s.accessibilityNotice.mainMessage = Oua a modalitæ moltiprocesso a no sopòrta e funçioin relative all’acesibilitæ. Sta modalitæ saiâ dizativâ quande t'arvi torna %S. Arvî torna oua?
+e10s.accessibilityNotice.disableAndRestart.label = Dizativa e arvi torna
+e10s.accessibilityNotice.disableAndRestart.accesskey = D
+e10s.accessibilityNotice.dontDisable.label = No dizativâ
+e10s.accessibilityNotice.dontDisable.accesskey = N
+
+
+
 
 
