--- a/lij/browser/chrome/browser/browser.properties
+++ b/lij/browser/chrome/browser/browser.properties
@@ -17,11 +17,11 @@ contextMenuSearch.accesskey = r
 bookmarkAllTabsDefault=[Nomme da cartella]
 
 xpinstallPromptWarning=%S o l'inpedisce a questo scito (%S) de instalâ software in sciô teu computer.
-xpinstallPromptAlowButton=Permetti
+xpinstallPromptAllowButton=Permetti
 # Accessibility Note:
 # Be sure you do not choose an accesskey that is used elsewhere in the active context (e.g. main menu bar, submenu of the warning popup button)
 # See http://www.mozilla.org/access/keyboard/accesskey for details
-xpinstallPromptAlowButton.accesskey=P
+xpinstallPromptAllowButton.accesskey=P
 xpinstallDisabledMessageLocked=L'instalaçion do software a l'é stæta dizabilitâ dò-u teu aministratô do scistema.
 xpinstallDisabledMessage=L'instalaçion do software a l'é dizabilita. Sciacca Abilita e preuva ancon.
 xpinstallDisabledButton=Abilita
@@ -35,8 +35,8 @@ addonsInstalled=#1 o l'é stæto instaou ben.;#2 conponenti azonti son stæti in
 addonsInstalledNeedsRestart=#1 saiâ instaou dòppo che ti arvi torna #3.;#2 conponenti azonti saian instalæ dòppo che ti arvi torna #3.
 addonInstallRestartButton=Arvi torna Òua
 addonInstallRestartButton.accesskey=R
-addonDownoadingAndVerifying = Descaregamento e verifica conp. azonto…;Descaregamento e verifica #1 comp. azonti…
-addonDownoadVerifying = Verifica in corso
+addonDownoladingAndVerifying = Descaregamento e verifica conp. azonto…;Descaregamento e verifica #1 conp. azonti…
+addonDownoladVerifying = Verifica in corso
 
 addonInstallError-1 = Inposcibile scaregâ o conponente azonto perché gh'é 'n'erô inta conescion.
 addonInstallError-2 = Inposcibile instalâ o conponente azonto perché o no corisponde a quelo che m'aspetavo da %1$S.
@@ -56,8 +56,8 @@ addonLocalInstallError-5 = Inposcibile instalâ sto conponente azonto perché o 
 # LOCALIZATION NOTE (lwthemeInstallRequest.message): %S will be replaced with
 # the host name of the site.
 lwthemeInstallRequest.message=Questo scito (%S) o l’à tentou de instalâ 'n tema.
-lwthemeInstallRequest.alowButton=Permetti
-lwthemeInstallRequest.alowButton.accesskey=P
+lwthemeInstallRequest.allowButton=Permetti
+lwthemeInstallRequest.allowButton.accesskey=P
 
 lwthemePostInstallNotification.message=L'é stæto instaou un neuvo tema.
 lwthemePostInstallNotification.undoButton=Anulla
@@ -75,7 +75,7 @@ popupWarningButton=Inpostaçioin
 popupWarningButton.accesskey=I
 popupWarningButtonUnix=Preferense
 popupWarningButtonUnix.accesskey=P
-popupAlow=Permetti i pop-up pe %S
+popupAllow=Permetti i pop-up pe %S
 popupBock=Blòcca i pop-up pe %S
 popupWarningDontShowFromMessage=No fâ vedde sta notiçia quando i pop-up son bocæ
 popupWarningDontShowFromLocationbar=No fâ vedde a bara de informaçioin quande i pop-up son bocæ
@@ -83,17 +83,17 @@ popupShowPopupPrefix=Fanni vedde '%S'
 
 # missing plugin installer
 crashedpluginsMessage.title=O plugin %S o s'é ciantou.
-crashedpluginsMessage.reoadButton.label=Recaregamento da pagina
-crashedpluginsMessage.reoadButton.accesskey=R
+crashedpluginsMessage.reloadButton.label=Recaregamento da pagina
+crashedpluginsMessage.reloadButton.accesskey=R
 crashedpluginsMessage.submitButton.label=Segnala un problema
 crashedpluginsMessage.submitButton.accesskey=S
 crashedpluginsMessage.learnMore=Pe saveine de ciu…
 
-mixedContentBocked.keepBockingButton.label = Continoa a bocâ
-mixedContentBocked.keepBockingButton.accesskey = C
-mixedContentBocked.message = Gh'é do contegnuo no seguo ch'o l'é stæto bocou da %S.
-mixedContentBocked.unbock.label = Leva a proteçion in sce questa pagina
-mixedContentBocked.unbock.accesskey = L
+mixedContentBlocked.keepBockingButton.label = Continoa a bocâ
+mixedContentBlocked.keepBockingButton.accesskey = C
+mixedContentBlocked.message = Gh'é do contegnuo no seguo ch'o l'é stæto bocou da %S.
+mixedContentBlocked.unbock.label = Leva a proteçion in sce questa pagina
+mixedContentBlocked.unbock.accesskey = L
 
 PluginClickToActivate = Ativa %S.
 # LOCALIZATION NOTE - "vulnerable" indicates there is a security bug in the
@@ -130,8 +130,8 @@ menuRestoreAllWindows.label=Arvî torna tutti i barcoin
 # LOCALIZATION NOTE (menuUndoCoseWindowLabel): Semi-coon list of plural forms.
 # See: http://deveoper.mozilla.org/en/docs/Localization_and_Plurals
 # #1 Window Title, #2 Number of tabs
-menuUndoCoseWindowLabel=#1 (e #2 atra feuggio);#1 (e #2 atra feuggio)
-menuUndoCoseWindowSingleTabLabel=#1
+menuUndoCloseWindowLabel=#1 (e #2 atra feuggio);#1 (e #2 atra feuggio)
+menuUndoCloseWindowSingleTabLabel=#1
 
 # Unified Back-/Forward Popup
 tabHistory.current=Stanni in sciâ pagina
@@ -142,10 +142,10 @@ tabHistory.goForward=Vanni avanti
 pasteAndGo.label=Incòlla & Vanni
 
 # Bock autorefresh
-refreshBocked.goButton=Permetti
-refreshBocked.goButton.accesskey=P
-refreshBocked.refreshLabel=%S o l'inpedisce o caregamento aotomatico da pagina.
-refreshBocked.redirectLabel=%S o l'inpedisce l'indirissamento aotomatico a-a atre pagine.
+refreshBlocked.goButton=Permetti
+refreshBlocked.goButton.accesskey=P
+refreshBlocked.refreshLabel=%S o l'inpedisce o caregamento aotomatico da pagina.
+refreshBlocked.redirectLabel=%S o l'inpedisce l'indirissamento aotomatico a-a atre pagine.
 
 # Star button
 starButtonOn.tooltip=Cangia questo segnalibbro
@@ -153,8 +153,8 @@ starButtonOff.tooltip=Azonzi questa pagina
 
 # Offline web applications
 offlineApps.available=Sto scito web (%S) o veu sarvâ di dæti in sciô teu computer pe poei ese uzou fea linia.
-offlineApps.alow=Permetti
-offlineApps.alowAccessKey=P
+offlineApps.allow=Permetti
+offlineApps.allowAccessKey=P
 offlineApps.never=Mai pe sto scito
 offlineApps.neverAccessKey=e
 offlineApps.notNow=Òua No
@@ -207,17 +207,17 @@ puAlertText=Sciacca chi pe-i detalli
 
 # LOCALIZATION NOTE (geoocation.shareLocation geoocation.alwaysShareLocation geoocation.neverShareLocation):
 #If you're having trouble with the word Condividdi, please use Alow and Bock in your language.
-geoocation.shareLocation=Condividdi Indirisso
-geoocation.shareLocation.accesskey=C
-geoocation.alwaysShareLocation=Condividdi de ongo st'indirisso
-geoocation.alwaysShareLocation.accesskey=l
-geoocation.neverShareLocation=No condividde mai st'indirisso
-geoocation.neverShareLocation.accesskey=N
-geoocation.shareWithSite=T'eu condividde o teu indirisso con %S?
-geoocation.shareWithFile=T'eu condividde o teu indirisso co-o file %S?
+geolocation.shareLocation=Condividdi Indirisso
+geolocation.shareLocation.accesskey=C
+geolocation.alwaysShareLocation=Condividdi de ongo st'indirisso
+geolocation.alwaysShareLocation.accesskey=l
+geolocation.neverShareLocation=No condividde mai st'indirisso
+geolocation.neverShareLocation.accesskey=N
+geolocation.shareWithSite=T'eu condividde o teu indirisso con %S?
+geolocation.shareWithFile=T'eu condividde o teu indirisso co-o file %S?
 # LOCALIZATION NOTE (geoocation.learnMore): Use the unicode ellipsis char, \u2026,
 # or use "..." if \u2026 doesn't suit traditions in your ocale.
-geoocation.learnMore=Pe saveine de ciu…
+geolocation.learnMore=Pe saveine de ciu…
 
 # Phishing/Malware Notification Bar.
 # LOCALIZATION NOTE (notAForgery, notAnAttack)
@@ -286,8 +286,8 @@ tabview.moveToUnnamedGroup.label=#1 e n'atra in ciu;#1 e #2 in ciù
 social.error.message = Òua l'é Inposcibile conetise a %2$S.%1$0.S
 social.error.tryAgain.label = Preuva torna
 social.error.tryAgain.accesskey = P
-social.error.coseSidebar.label = Særa sta bara de scianco
-social.error.coseSidebar.accesskey = S
+social.error.closeSidebar.label = Særa sta bara de scianco
+social.error.closeSidebar.accesskey = S
 
 webapps.install.success = L'aplicaçion a l'é instalâ
 
@@ -301,9 +301,9 @@ identity.newIdentity.email.placeholder = Email
 identity.newIdentity.description = Dimme l'indirisso email pe acede a %S
 identity.next.label = Avanti
 identity.next.accessKey = A
-identity.oggedIn.description = Accesso comme: %S
-identity.oggedIn.signOut.label = Disconnetti
-identity.oggedIn.signOut.accessKey = D
+identity.loggedIn.description = Accesso comme: %S
+identity.loggedIn.signOut.label = Disconnetti
+identity.loggedIn.signOut.accessKey = D
 
 # LOCALIZATION NOTE (syncPromoNotification.addons.label): This appears in
 # the add-on install complete panel when Sync isn't set.
@@ -316,6 +316,11 @@ syncPromoNotification.addons.description=Ti peu acede a-i teu conponenti azonti 
 # The final space separates this text from the Learn More link.
 syncPromoNotification.addons-sync-disabled.description=Ti peu adeuviâ  o teu account %S pe scincronizâ i teu conponenti azonti fra tanti aparati.\u0020
 
+keywordURIFixup.message = Ti voevi arvî %S?
+keywordURIFixup.goTo = Sci, arvi %S
+keywordURIFixup.goTo.accesskey = S
+keywordURIFixup.dismiss = No graçie
+keywordURIFixup.dismiss.accesskey = N
 
 
 
@@ -338,10 +343,10 @@ sowStartup.disableNotificationButton.accesskey = N
 
 social.aria.toolbarButtonBadgeText = %1$S (%2$S)
 
-pointerLock.alwaysAlow = Permetti de ongo
-pointerLock.alwaysAlow.accesskey = C
-pointerLock.neverAlow = No asconde mai
-pointerLock.neverAlow.accesskey = m
+pointerLock.alwaysAllow = Permetti de ongo
+pointerLock.alwaysAllow.accesskey = C
+pointerLock.neverAllow = No asconde mai
+pointerLock.neverAllow.accesskey = m
 
 popupWarning.message = #1 o l'à inpedio a sto scito d'arvî un barcon de pop-up.;#1 o l'à inpedio a sto scito d'arvî #2 barcoin de pop-up.
 
@@ -359,8 +364,8 @@ installPlugin.button.accesskey = I
 installPlugin.ignoreButton.label = No domandameo ciù
 installPlugin.ignoreButton.accesskey = N
 
-pointerLock.alow2 = Ascondi a freccia do ratto
-pointerLock.alow2.accesskey = 
+pointerLock.allow2 = Ascondi a freccia do ratto
+pointerLock.allow2.accesskey = 
 pointerLock.autoLock.title2 = %S o l'ascodiâ a freccia do ratto.
 
 pointerLock.title2 = Permette a-o navegatô d'asconde a freccia do ratto in sce %S?
@@ -379,8 +384,8 @@ pluginActivate.riskLabel = Quæ o l'é o reizego?
 pluginActivate.updateLabel = Agiorna oua…
 pluginActivateAlways.accesskey = r
 pluginActivateAlways.label = Permetti e aregòrda
-pluginActivateBocked.label = Bocou pe raxoin de proteçion
-pluginActivateBocked.message = "%1$S" o l'é stæto bocou da %2$S pe raxoin de proteçion.
+pluginActivateBlocked.label = Bocou pe raxoin de proteçion
+pluginActivateBlocked.message = "%1$S" o l'é stæto bocou da %2$S pe raxoin de proteçion.
 pluginActivateDisabled.label = Dizativou
 pluginActivateDisabled.manage = Gestion di plugin…
 pluginActivateDisabled.message = "%S" o l'é dizativou.
@@ -437,7 +442,7 @@ addonInstall.acceptButton.accesskey = I
 addonInstall.cancelButton.label = Anulla
 addonInstall.cancelButton.accesskey = A
 addonInstall.unsigned = (no verificou)
-addonInstallErrorBocklisted = Inposcibile instalâ %S perché gh'é 'n'erto reizego pe a stabilitæ ò seguessa.
+addonInstallErrorBlocklisted = Inposcibile instalâ %S perché gh'é 'n'erto reizego pe a stabilitæ ò seguessa.
 addonInstallErrorIncompatible = Inposcibile instalâ %3$S perché o no l'é conpatibile con %1$S %2$S.
 addonwatch.disable.label = Dizativa %S
 addonwatch.ignorePerm.label = Ignòra de ongo
@@ -447,13 +452,13 @@ addonwatch.ignoreSession.accesskey = I
 addonwatch.restart.label = Arvi torna %S
 addonwatch.restart.accesskey = R
 addonwatch.restart.message = Bezeugna arvî torna %2$S pe dizativâ %1$S
-addonwatch.sow = O fonçionamento de %2$S o porieiva ese ralentou da %1$S
-appmenu.downoadUpdateButton.label = Scarega agiornamento
+addonwatch.slow = O fonçionamento de %2$S o porieiva ese ralentou da %1$S
+appmenu.downloadUpdateButton.label = Scarega agiornamento
 appmenu.restartBrowserButton.label = Arvi torna %S
 appmenu.restartNeeded.description = Arvi torna %S pe istalâ i agiornamenti
 appmenu.updateFailed.description = Agiornamento aotomatico no ariescio, bezeugna scaregâ l’agiornamento
-badContentBocked.bocked.message = Quarche contegnuo in sta pagina o l'é stæto bocou da %S.
-badContentBocked.notbocked.message = Nisciun contegnuo in sta pagina o l'é oua bocou da %S.
+badContentBlocked.blocked.message = Quarche contegnuo in sta pagina o l'é stæto bocou da %S.
+badContentBlocked.notblocked.message = Nisciun contegnuo in sta pagina o l'é oua bocou da %S.
 ctrlTab.listAllTabs.label = ;Elenca tutti i #1 feuggi
 deveditionTheme.name = Ediçion pe-i Sviopatoî
 downoads.tooltip = Mostra l’avansamento di descaregamenti in corso (%S)
